--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -6,6 +6,7 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
+$large-font-size:  $base-font-size * 1.275 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
@@ -13,6 +14,7 @@ $spacing-unit:     30px !default;
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
+$base-color:       #F64747 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
