--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -3,7 +3,6 @@
  */
  .site-header {
     border-top: 5px solid $base-color;
-    background-color: $grey-color-light;
     min-height: $spacing-unit * 3,5;
     text-align: center;
   
@@ -223,7 +222,8 @@
   }
   
   .page-heading {
-    @include relative-font-size(2);
+    @include relative-font-size(1.725);
+    color: $base-color;
     text-align: center;
   }
   
