--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,11 +32,11 @@ layout: default
   
   <script>
   var disqus_config = function () {
-    this.page.url = 'https://filipgal.github.io'  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = "{{ site.url }}{{ page.url }}";
+    this.page.identifier = "{{ page.url }}";
     };
   
-      (function() { // DON'T EDIT BELOW THIS LINE
+      (function() {
       var d = document, s = d.createElement('script');
   
       s.src = 'https://https-filipgal-github-io.disqus.com/embed.js';
