--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="author" href="humans.txt" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
@@ -11,5 +13,7 @@
   {% include google-analytics.html %}
   {% endif %}
 
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="./assets/images/filip.jpg" />
   {% seo %}
 </head>
