Update open graph image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,11 @@
   {% include google-analytics.html %}
   {% endif %}
 
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="./assets/images/filip.jpg" />
+  <meta property="og:type" content="URL" />
+  
+  <meta property="og:image" content="https://goo.gl/HFCRSA" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="125">
+  <meta property="og:image:height" content="140">
   {% seo %}
 </head>
