--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,15 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+
+  <div class="PageNavigation">
+    {% if page.previous.url %}
+      <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    {% endif %}
+    {% if page.next.url %}
+      <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    {% endif %}
+  </div>
   
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
@@ -49,6 +58,6 @@ layout: default
       Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
     </noscript>
   
-  {% endif %}
+  {% endif %}  
 
 </article>
