--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -260,8 +260,27 @@
     @include relative-font-size(2);
   }
   
-  
-  
+    /**
+    * Previous & next post styles
+    */
+    .PageNavigation {
+      font-size: 14px;
+      display: block;
+      width: auto;
+      overflow: hidden;
+    }
+    
+    .PageNavigation a {
+      display: block;
+      width: 50%;
+      float: left;
+      margin: 1em 0;
+    }
+    
+    .PageNavigation .next {
+      text-align: right;
+    }
+
   /**
    * Posts
    */
